@@ -342,5 +342,6 @@ exportClass(singleModelValuesAccessClass)
 exportClass(singleVarAccessClass) 
 
 export(registerDistributions)
+export(deregisterDistributions)
 export(getNimbleOption)
 export(nimbleOptions)
