@@ -1,14 +1,12 @@
-#source(system.file(file.path('tests', 'test_utils.R'), package = 'nimble'))
-
-
-# tmp
-library(testthat)
-context("Testing of user-supplied distributions and functions in BUGS code")
-
-## User-supplied distributions
-
 # tmp
 library(nimble, lib.loc = '/tmp/nim41')
+
+source(system.file(file.path('tests', 'test_utils.R'), package = 'nimble'))
+
+context("Testing of user-supplied distributions and functions in BUGS code")
+
+## User-supplied functions
+
 
 dbl <- nimbleFunction(
     run = function(x = double(0)) {
@@ -36,17 +34,17 @@ dblSum <- nimbleFunction(
 
 code <- nimbleCode({
     x ~ dnorm(0, 1)
-    dx ~ dnorm(dbl(x), .01)
-    y[1:K] ~ dmnorm(vecdbl(mu[1:K]), cov = .01*I[1:K, 1:K])
+    dx ~ dnorm(dbl(x), sd = .01)
+    y[1:K] ~ dmnorm(vecdbl(mu[1:K]), cov = .0001*I[1:K, 1:K])
     mu[1:K] ~ dmnorm(zeros[1:K], cov = I[1:K, 1:K])
     z ~ dnorm(0, 1)
-    dz ~ dnorm(dblSum(x, z), .01)
+    dz ~ dnorm(dblSum(x, z), sd = .01)
     # vectorized fun applied to scalar nodes-based variable
 
     for(i in 1:K) {
         theta[i] ~ dnorm(0, 1)
     }
-    w[1:K] ~ dmnorm(vecdbl(theta[1:K]), cov = .01*I[1:K, 1:K])
+    w[1:K] ~ dmnorm(vecdbl(theta[1:K]), cov = .0001*I[1:K, 1:K])
 })
 
 K <- 3
@@ -56,7 +54,6 @@ m <- nimbleModel(code, inits = list(x = 0.25, y = 1:K, mu = 1:K,
 
 cm <- compileNimble(m)
 
-if(F) {
 set.seed(0)
 simulate(m)
 set.seed(0)
@@ -64,12 +61,206 @@ simulate(cm)
 
 for(var in c('dx', 'y', 'dz', 'w')) {
     try(test_that("Test that R and C models agree with user-suppled functions: ",
-                  expect <- that(get(var, m), equals(get(var, cm),
+                  expect_that(get(var, m), equals(get(var, cm),
                                              info = paste0(var, " values differ")))))
 }
+try(test_that("Test that values based on user-supplied functions are correct: ",
+              expect_that(abs(2*cm$x - cm$dx), is_less_than(.03),
+                          info = paste0("x and dx are not consistent"))))
+try(test_that("Test that values based on user-supplied functions are correct: ",
+              expect_that(max(abs(2*cm$mu - cm$y)), is_less_than(.03),
+                          info = paste0("mu and y are not consistent"))))
+try(test_that("Test that values based on user-supplied functions are correct: ",
+              expect_that(abs(2*(cm$x + cm$z) - cm$dz), is_less_than(.03),
+                          info = paste0("x plus z and dz are not consistent"))))
+try(test_that("Test that values based on user-supplied functions are correct: ",
+              expect_that(max(abs(2*cm$theta - cm$w)), is_less_than(.03),
+                          info = paste0("theta and w are not consistent"))))
 
+
+## User-supplied distributions
+
+dmyexp <- nimbleFunction(
+    run = function(x = double(0), rate = double(0), log_value = integer(0)) {
+        returnType(double(0))
+        logProb <- log(rate) - x*rate
+        if(log_value) {
+            return(logProb)
+        } else {
+            return(exp(logProb))
+        }
+    })
+
+rmyexp <- nimbleFunction(
+    run = function(n = integer(0), rate = double(0)) {
+        returnType(double(0))
+        if(n != 1) nimPrint("rmyexp only allows n = 1; using n = 1.")
+        dev <- runif(1, 0, 1)
+        return(-log(1-dev) / rate)
+    }
+    )
+
+pmyexp <- nimbleFunction(
+    run = function(q = double(0), rate = double(0), lower_tail = integer(0), log_p = integer(0)) {
+        returnType(double(0))
+        if(!lower_tail) {
+            logp = -rate * q
+            if(log_p) {
+                return(logp)
+            } else {
+                return(exp(logp))
+            }
+        } else {
+            p = 1 - exp(-rate * q)
+            if(!log_p) {
+                return(p)
+            } else {
+               return(log(p))
+           }
+        }
+    }
+    )
+
+qmyexp <- nimbleFunction(
+    run = function(p = double(0), rate = double(0), lower_tail = integer(0), log_p = integer(0)) {
+        returnType(double(0))
+        if(log_p) {
+            p = exp(p)
+        }
+        if(!lower_tail) {
+            p = 1 - p
+        }
+        return(-log(1 - p) / rate)
+    }
+    )
+
+
+
+ddirchmulti <- nimbleFunction(
+    run = function(x = double(1), alpha = double(1), size = double(0), log_value = integer(0)) {
+        returnType(double(0))
+        logProb <- lgamma(sum(alpha)) - sum(lgamma(alpha)) + sum(lgamma(alpha + x)) - lgamma(sum(alpha) + size)
+        if(log_value) {
+            return(logProb)
+        } else {
+            return(exp(logProb))
+        }
+    })
+
+rdirchmulti <- nimbleFunction(
+    run = function(n = integer(0), alpha = double(1), size = double(0)) {
+        returnType(double(1))
+        if(n != 1) nimPrint("rdirchmulti only allows n = 1; using n = 1.")
+        p <- rdirch(1, alpha)
+        return(rmulti(1, size = size, prob = p))
+    })
+
+registerDistributions(list(
+    dmyexp = list(
+        BUGSdist = "dmyexp(rate, scale)",
+        Rdist = "dmyexp(rate = 1/scale)",
+        altParams = "scale = 1/rate",
+        pqAvail = TRUE),
+    ddirchmulti = list(
+        BUGSdist = "ddirchmulti(alpha, size)",
+        types = c('value = double(1)', 'alpha = double(1)', 'size = double(0)'))
+        )
+    )
+                      
+
+code1 <- BUGScode({
+    for(i in 1:n1) {
+        y1[i] ~ dmyexp(rate = r1)
+        y2[i] ~ dmyexp(scale = s2)
+    }
+    r1 <- 1 / s1
+    s1 ~ dunif(0, 100)
+    s2 ~ dunif(0, 100)
+})
+
+code2 <- BUGScode({
+    for(i in 1:n2) {
+        y3[i] ~ dpois(lambda)
+    }
+    lambda ~ T(dmyexp(scale = 5), 0, upper)
+})
+
+code3 <- BUGScode({
+    for(i in 1:m) {
+        y[i, 1:P] ~ ddirchmulti(alpha[1:P], sz)
+    }
+    for(i in 1:P) {
+        alpha[i] ~ dgamma(.001, .001);
+    }
+})
+
+set.seed(0)
+mn = 3
+n1 <- 100
+y1 <- rexp(n1, rate = 1/mn)
+y2 <- rexp(n1, rate = 1/mn)
+
+lambda = 2.5
+n2 <- 50
+y3 <- rpois(n2, lambda)
+
+upper <-  3
+
+sz <- 50
+alpha <- 100*c(1,2,3)
+m <- 4
+P <- length(alpha)
+y <- p <- matrix(0, nrow = m, ncol = P)
+for( i in 1:m ) {
+    p[i, ] <- rdirch(1, alpha)
+    y[i, ] <- rmultinom(1, size = sz, prob  = p[i,])
 }
-                   
-    
 
-    
+data1 <- list(y1 = y1, y2 = y2, n1 = n1)
+data2 <- list(y3 = y3, n2 = n2, upper = upper)
+data3 <- list(y = y, m = m, P = P)
+  
+inits1 <- list(s1 = 1, s2 = 1)
+inits2 <- list(lambda = 1)
+inits3 <- list(alpha = rep(30, P))
+
+
+testBUGSmodel(code1, example = 'user1', dir = "", data = data1, inits = inits1, useInits = TRUE)
+#testBUGSmodel(code2, example = 'user2', dir = "", data = data2, inits = inits2, useInits = TRUE)
+testBUGSmodel(code3, example = 'user3', dir = "", data = data3, inits = inits3, useInits = TRUE)
+
+
+debug(test_mcmc)
+test_mcmc(model = code1, data = data1, inits = inits1,
+          results = list(mean = list(s1 = mn, s2 = mn)),
+          resultsTolerance = list(mean = list(s1 = .2, s2 = .2)))
+
+test_mcmc(model = code3, data = data3, inits = inits3,
+          results = list(mean = list(alpha = alpha)),
+          resultsTolerance = list(mean = list(alpha = rep(5, P))))
+
+if(F) {
+m <- nimbleModel(code2, constants = data2, inits = inits2)
+cm <- compileNimble(m)
+
+spec <- configureMCMC(m)
+Rmcmc <- buildMCMC(spec)
+Cmcmc <- compileNimble(Rmcmc, project = m)
+
+Cmcmc$run(5000)
+smp <- as.matrix(Cmcmc$mvSamples)
+
+try(test_that("Test that truncation works with user-supplied distribution: ",
+              expect_that(max(smp[ , 'lambda']), is_less_than(upper),
+                          info = paste0("parameter exceeds upper bound"))))
+}
+
+debug(deregisterDistributions)
+deregisterDistributions('ddirchmulti')
+try(test_that("Test that deregistration of user-supplied distributions works: ",
+              expect_that(is.null(nimble:::nimbleUserNamespace$distributions[['ddirchmulti']]), equals(TRUE),
+                          info = paste0("ddirchmulti has not been deregistered"))))
+
+
+# add test to remove dist
+# add test for user-supled to override default
